// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextPlaceholder should be rendered correctly 1`] = `
<span
  className="loadingWord text-placeholder-color-gray40 animatedLoading"
>
  0000000000000
</span>
`;

exports[`TextPlaceholder should be rendered correctly 2`] = `
<span
  className="loadingWord text-placeholder-color-gray40"
>
  0000000000000 0000000000000 0000000000000 0000000000000 0000000000000
</span>
`;
